Fix bug 262811 - When hovering a ToDo item long lines of the description doesn't break into multiple lines. r=mvl,patch=gekacheka

--- a/calendar/lightning/themes/pinstripe/lightning.css
+++ b/calendar/lightning/themes/pinstripe/lightning.css
@@ -263,3 +263,36 @@ toolbar[iconsize="small"] #task-switch-button:hover:active {
 toolbar[iconsize="small"] #task-switch-button[disabled] {
   -moz-image-region: rect(88px 136px 110px 114px);
 } 
+
+/*--------------------------------------------------------------------
+ * tooltips
+ *-------------------------------------------------------------------*/
+vbox.tooltipBox {
+  max-width: 40em;
+}
+
+column.tooltipValueColumn {
+  max-width: 35em; /* tooltipBox max-width minus space for label */
+}
+
+label.tooltipHeaderLabel {
+  font-weight: bold;
+  text-align: right;
+  margin: 0em 1em 0em 0em; /* 1em space before value */
+}
+
+description.tooltipHeaderDescription {
+  font-weight: normal;
+  text-align: left;
+  margin: 0pt;
+}
+
+separator.tooltipBodySeparator {
+  height: 1ex; /* 1ex space above body text, below last header. */
+}
+
+description.tooltipBody {
+  font-weight: normal;
+  white-space: -moz-pre-wrap;
+  margin: 0pt;
+}
